k8s/base/sso-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-service
  labels:
    app: sso-service
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-service
  template:
    metadata:
      labels:
        app: sso-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: sso-service
          image: ghcr.io/sabirkekw/ecommerce_go-sso-service:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
