k8s/base/sso-service/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-sso-service
  namespace: ecommerce-dev
spec:
  ports:
  - port: 5432
  selector:
    app: postgres-sso
  clusterIP: None # Headless сервис для StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sso
  namespace: ecommerce-dev
spec:
  serviceName: "postgres-sso-service"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-sso
  template:
    metadata:
      labels:
        app: postgres-sso
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pg-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: pg-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
