k8s/base/sso-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  - name: grpc
    port: 50051
    targetPort: 50051
  type: ClusterIP
